--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,5 +36,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/dashboard, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: /dashboard/account/new, roles: ROLE_ADMIN }
+        - { path: /dashboard/account/list, roles: ROLE_ADMIN }
+        - { path: ^/dashboard, roles: [ROLE_USER] }
