--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "twilio": "^3.44.0"
     }
 }
