Sent and Receive WhatsApp Message

--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
-APP_SECRET=6db8c828cbf934c1cba770a830d43c5b
+APP_ENV=dev
+APP_SECRET=9095278541fd1a79355ac3ca03a5e101
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
